# BenevolentDirector

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  mise.toml  package.json
e2e/: sales-engineer.spec.ts
scripts/: check-v2-adr-consistency.mjs
services/intelligence-worker/: Dockerfile  README.md  pyproject.toml
services/intelligence-worker/src/intelligence_worker/: __init__.py  completeness_tracker.py  config.py  dead_letter_events.py  extractors.py  main.py  observation_events.py  qa_extraction.py  requirement_artifacts.py  subscriber.py
services/intelligence-worker/src/intelligence_worker/classification/: __init__.py  intent_classifier.py  missing_info.py
services/intelligence-worker/src/intelligence_worker/estimates/: __init__.py  models.py  orchestrator.py  prompts.py  repository.py  runtime.py  subscriber.py
services/intelligence-worker/src/intelligence_worker/market/: __init__.py  models.py  orchestrator.py  providers.py  repository.py  runtime.py  subscriber.py
services/intelligence-worker/src/intelligence_worker/store/: __init__.py  case_store.py
services/intelligence-worker/tests/: test_case_store.py  test_completeness_integration.py  test_completeness_tracker.py  test_config.py  test_dead_letter_integration.py  test_estimate_orchestrator.py  test_estimate_repository.py  test_estimate_subscriber.py  test_extractors.py  test_intent_classifier.py  test_main.py  test_market_orchestrator.py  test_market_providers.py  test_market_runtime.py  test_missing_info.py  test_qa_extraction.py  test_requirement_artifacts.py  test_subscriber.py
(+199 files in other folders)
