[project]
name = "benevolent-director-intelligence-worker"
version = "0.0.0"
description = "v2 intelligence worker scaffold"
requires-python = ">=3.12"
dependencies = [
  "structlog>=24.1.0",
]

[project.scripts]
intelligence-worker = "intelligence_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intelligence_worker"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
